--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,16 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "src/pages/api/transfer-contract.js"
   ],
   "exclude": [
     "node_modules"
