--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "prettier:write": "prettier --write '**/*.{js,ts,jsx,tsx}'"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
+		"antd": "^5.1.5",
+		"@ant-design/icons": "^5.0.0",
     "@nextui-org/react": "1.0.8-beta.5",
     "@paypal/react-paypal-js": "^8.1.3",
     "@stripe/react-stripe-js": "^2.3.0",
